--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ body {
     }
 }
 
+.hero .card p{
+    color: rgb(95, 95, 95);
+    
+}
+
 /* fin header */
 
 /* hero */
@@ -71,7 +76,9 @@ body {
     gap: 20px;
     align-items: center;
     margin-top: 10px;
+    margin-left: -20px;
     font-size: 1.5rem;
+    
     color: rgb(125, 125, 125);
 }
 .hero .card .btn{
@@ -88,13 +95,61 @@ body {
 }
 /* fin hero */
 
+/* content */
 .content{
+    display: grid;
+    grid-template-columns: 650px 1fr;
+    direction: rtl;
+    grid-template-areas: 
+        "cards"
+        "cards"
+        "cards"
+        "ver-proyectos";
+
+    gap: 50px;
+    margin: 20px 550px 50px 200px;
+}
+.content .cards .card-info{ 
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    padding: 50px;
-    margin: 10px 100px 0px 100px;
-    height: 400px;
-    width: auto;
+    gap: 10px;
+    direction: ltr;
+    justify-content: center;
+    
+    p{
+        color: rgb(95, 95, 95);
+    }
+    margin-top: 30px;
+    a{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #6bbfff;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    font-size: 1.1rem;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    }
+}
+.content .cards .card-info h2{
+    font-size: 2rem;
+    margin-bottom: 10px;
+    text-align: justify;
+
+}
+.content .cards .card-info span{
+    display: inline-block;
+    background-color: #cfecf8;
+    color: #1e7cff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px;
+}
+hr{
+    border: none;
+    border-top: 1px solid #b4b4b4;
+    box-shadow: 0px 0px -10px #b4b4b4;
+    margin: 20px 0;
 }
